Fix layout shift from input border

--- a/src/styles/_modules.scss
+++ b/src/styles/_modules.scss
@@ -637,7 +637,7 @@
 
   // Doing custom focus style
   outline: none;
-  border-color: transparent;
+  border: 1px solid transparent;
   border-radius: 0;
 
   &:focus {
